# cs336-assignment1

./: .gitignore  basics.ipynb  einstein.ipynb  pyproject.toml  run_train_bpe.py
src/: model.py  pretokenization_example.py  tokenizer.py  train_bpe.py
src/utils/: io.py
tests/: adapters.py  common.py  test_model.py  test_tokenizer.py  test_train_bpe.py
tests/fixtures/: tinystories_sample_mini.txt
