[project]
name = "bpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "einx>=0.3.0",
    "ipykernel>=6.30.1",
    "memory-profiler>=0.61.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"] # Add your source directory to the Python path
testpaths = [
    "tests",
    "src"
]
